--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
       <ion-chip slot="start">
         <ion-label color="success">001</ion-label>
       </ion-chip>
-      
+
       <ion-label>
         <div>
           <h2>Bulbasaur</h2>
@@ -26,71 +26,192 @@
           <ion-badge color="tertiary">Poison</ion-badge>
         </div>
       </ion-label>
-    
+
       <ion-thumbnail slot="end">
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png">
       </ion-thumbnail>
-     
+
     </ion-item>
 
     <ion-item color="dark">
       <ion-chip slot="start">
         <ion-label color="danger">004</ion-label>
       </ion-chip>
-      
+
       <ion-label>
         <div>
           <h2>Charmander</h2>
           <ion-badge color="danger">Fire</ion-badge>
         </div>
       </ion-label>
-    
+
       <ion-thumbnail slot="end">
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png">
       </ion-thumbnail>
-     
+
     </ion-item>
 
     <ion-item color="dark">
       <ion-chip slot="start">
         <ion-label color="primary">007</ion-label>
       </ion-chip>
-      
+
       <ion-label>
         <div>
           <h2>Squirtle </h2>
           <ion-badge color="primary">Water</ion-badge>
         </div>
       </ion-label>
-    
+
       <ion-thumbnail slot="end">
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png">
       </ion-thumbnail>
-     
+
+    </ion-item>
+
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="danger">006</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Charizard </h2>
+          <ion-badge color="danger">Fire</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png">
+      </ion-thumbnail>
+
     </ion-item>
 
     <ion-item color="dark">
       <ion-chip slot="start">
         <ion-label color="warning">025</ion-label>
       </ion-chip>
-      
+
       <ion-label>
         <div>
-          <h2>Squirtle </h2>
+          <h2>Pikachu </h2>
           <ion-badge color="warning">Eletric</ion-badge>
-          
+
         </div>
       </ion-label>
-    
+
       <ion-thumbnail slot="end">
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png">
       </ion-thumbnail>
-     
+
     </ion-item>
 
-    
 
-    
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="medium">052</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Meowth </h2>
+          <ion-badge color="medium">Normal</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/052.png">
+      </ion-thumbnail>
+
+    </ion-item>
+
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="warning">125</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Electabuzz </h2>
+          <ion-badge color="warning">Electric</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/125.png">
+      </ion-thumbnail>
+
+    </ion-item>
+
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="primary">130</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Gyarados </h2>
+          <ion-badge color="primary">Water</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/130.png">
+      </ion-thumbnail>
+
+    </ion-item>
+
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="medium">143</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Snorlax </h2>
+          <ion-badge color="medium">Normal</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/143.png">
+      </ion-thumbnail>
+
+    </ion-item>
+
+    <ion-item color="dark">
+      <ion-chip slot="start">
+        <ion-label color="medium">150</ion-label>
+      </ion-chip>
+
+      <ion-label>
+        <div>
+          <h2>Mewtwo </h2>
+          <ion-badge color="medium">Psychic</ion-badge>
+
+        </div>
+      </ion-label>
+
+      <ion-thumbnail slot="end">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/150.png">
+      </ion-thumbnail>
+
+    </ion-item>
+
+
+
+
+
+
+
+
+
+
 
     <ion-item-options side="end">
       <ion-item-option color="warning">Alterar</ion-item-option>
